--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-# ---> C++
+# Created by https://www.toptal.com/developers/gitignore/api/macos,visualstudiocode,c++,cmake
+# Edit at https://www.toptal.com/developers/gitignore?templates=macos,visualstudiocode,c++,cmake
+
+### C++ ###
 # Prerequisites
 *.d
 
@@ -32,7 +35,59 @@
 *.out
 *.app
 
-# ---> VisualStudioCode
+### CMake ###
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
+### CMake Patch ###
+CMakeUserPresets.json
+
+# External projects
+*-prefix/
+
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+### macOS Patch ###
+# iCloud generated files
+*.icloud
+
+### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -46,4 +101,13 @@
 # Built Visual Studio Code Extensions
 *.vsix
 
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
+# End of https://www.toptal.com/developers/gitignore/api/macos,visualstudiocode,c++,cmake
+
 build/
+bin/
+.DS_Store
