--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,7 +13,7 @@
         {
             "label": "build",
             "type": "shell",
-            "command": "cd ${workspaceFolder} && mkdir -p build && cd build && cmake .. && cmake --build .",
+            "command": "cd ${workspaceFolder} && rm -rf build && mkdir build && cd build && cmake .. && make",
             "group": {
                 "kind": "build",
                 "isDefault": true
@@ -45,6 +45,16 @@
                 "kind": "build",
                 "isDefault": true
             }
+        },
+        {
+            "label": "run",
+            "type": "shell",
+            "command": "${workspaceFolder}/bin/quadromania",
+            "group": {
+                "kind": "test",
+                "isDefault": false
+            },
+            "dependsOn": "build and package"
         }
     ]
 } 
